--- a/card.html
+++ b/card.html
@@ -111,7 +111,7 @@
               <div class="catalog-item catalog-item--vertical">
                 <div class="catalog-item__content">
                   <div class="catalog-item__name">Проект называется так</div>
-                  <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                  <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__done">Реализовано</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__prop">Площадь 130га </span></div>
                 </div><img class="img-responsive mb-4" src="img/755187818413381.jpg" alt=""><br>
                 <div class="btn btn--primary">Скачать</div>
                 <div class="mb-2"></div>
