--- a/index.html
+++ b/index.html
@@ -44,9 +44,24 @@
       </header>
       <div class="home-slider">
         <div class="home-slider__container owl-carousel js-home-slider">
-          <div class="home-slider__item" style="background-image: url('img/topsl1.png');"></div>
-          <div class="home-slider__item" style="background-image: url('img/topsl2.png');"></div>
-          <div class="home-slider__item" style="background-image: url('img/topsl3.png');"></div>
+          <div class="home-slider__item" style="background-image: url('img/topsl1.png');">
+            <div class="container">
+              <div class="home-slider__header">Экономико-географическое <br> положение</div>
+              <div class="home-slider__text">Выгодное экономико-географическое расположение в центральной части России на границу с Беларусью и Украиной и наличие крупных железнодорожных узлов, развитая сеть автомагистралей</div>
+            </div>
+          </div>
+          <div class="home-slider__item" style="background-image: url('img/topsl2.png');">
+            <div class="container">
+              <div class="home-slider__header">Высокий природно-ресурсный и производственный потенциал</div>
+              <div class="home-slider__text">позволяющие в сочетании с высокой освоенностью территории минимизировать издержки при реализации инвестиционных проектов</div>
+            </div>
+          </div>
+          <div class="home-slider__item" style="background-image: url('img/topsl3.png');">
+            <div class="container">
+              <div class="home-slider__header">Нацеленность власти</div>
+              <div class="home-slider__text">на создание благоприятного инвестиционного климата на региональном и муниципальном уровне</div>
+            </div>
+          </div>
         </div>
         <div class="home-slider-dots__container-bg"></div>
         <div class="home-slider-dots__container">
@@ -191,6 +206,21 @@
                       <div class="event-tile__date">23.12.1233</div>
                       <div class="event-tile__text">«День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.</div>
                     </div>
+                    <div class="event-tile">
+                      <button class="event-tile__close"><span class="icon icon-download"></span></button>
+                      <h4><a class="event-tile__header" href="#">IV Международный форум «День инноваций в архитектуре и строительстве»</a></h4><img class="event-tile__image" src="img/0d1fd34f22c9730e91eb5170fbddc114_XS.jpg" alt="">
+                      <div class="event-tile__date">23.12.1233</div>
+                      <div class="event-tile__text">«День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.</div>
+                    </div>
+                    <div class="event-tile">
+                      <button class="event-tile__close"><span class="icon icon-download"></span></button>
+                      <h4><a class="event-tile__header" href="#">IV Международный форум «День инноваций в архитектуре и строительстве»</a></h4><img class="event-tile__image" src="img/0d1fd34f22c9730e91eb5170fbddc114_XS.jpg" alt="">
+                      <div class="event-tile__date">23.12.1233</div>
+                      <div class="event-tile__text">«День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.</div>
+                    </div>
+                    <div class="ta-center mt-2">
+                      <div class="btn btn--primary">Загрузить еще</div>
+                    </div>
                   </div>
                   <div class="tabs-content__item">
                     <div class="event-tile">
@@ -198,6 +228,9 @@
                       <h4><a class="event-tile__header" href="#">IV Международный форум «День инноваций в архитектуре и строительстве»</a></h4><img class="event-tile__image" src="img/0d1fd34f22c9730e91eb5170fbddc114_XS.jpg" alt="">
                       <div class="event-tile__date">23.12.1233</div>
                       <div class="event-tile__text">«День инноваций в архитектуре и строительстве» – одно из центральных деловых событий отрасли, целью которого является обмен передовым опытом по широкому кругу вопросов, связанных с проектированием, возведением и эксплуатацией зданий, а также современными подходами к управлению городами.</div>
+                    </div>
+                    <div class="ta-center mt-2">
+                      <div class="btn btn--primary">Загрузить еще</div>
                     </div>
                   </div>
                 </div>
