--- a/catalog.html
+++ b/catalog.html
@@ -104,19 +104,19 @@
             </div>
           </nav>
         </div>
-        <div class="container mb-6">
+        <div class="container">
           <h2 class="title title--thin mb-4">Каталог </h2>
           <div class="row">
-            <div class="col-md-12 mb-6">
+            <div class="col-md-12 mb-6 catalog-top">
               <div class="search">
-                <div class="search__title">Поиск</div>
+                <div class="search__title catalog-top__text">Поиск</div>
                 <div class="search__input">
                   <input class="input input-bd" type="text">
                   <div class="search__btn"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16Z" transform="translate(1 1)" stroke="black" stroke-opacity="0.54" stroke-linecap="round" stroke-linejoin="round"/><path d="M4.35 4.35L0 0" transform="translate(14.6499 14.65)" stroke="black" stroke-opacity="0.54" stroke-linecap="round" stroke-linejoin="round"/></div></svg>
                 </div>
-              </div>
+              </div><br class="visible-xs">
               <div class="d-inline-table">
-                <div class="d-table-cell va-middle pr-1">Муниципальный район</div>
+                <div class="d-table-cell va-middle pr-1 catalog-top__text">Муниципальный район</div>
                 <div class="d-table-cell va-middle"> 
                   <select class="js-select">
                     <option value="1">llfds</option>
@@ -228,10 +228,6 @@
                     </select>
                   </div>
                 </div>
-                <div class="catalog-filter__btn">Проекты</div>
-                <div class="catalog-filter__section"></div>
-                <div class="catalog-filter__btn">Площадки</div>
-                <div class="catalog-filter__section"></div>
                 <div class="catalog-filter__btn active">Проекты</div>
                 <div class="catalog-filter__section">
                   <div class="catalog-filter__row">
@@ -271,8 +267,46 @@
                     </div>
                   </div>
                 </div>
-                <div class="catalog-filter__btn">Предложения</div>
-                <div class="catalog-filter__section"></div>
+                <div class="catalog-filter__btn active">Предложения</div>
+                <div class="catalog-filter__section">
+                  <div class="catalog-filter__section"></div>
+                  <div class="catalog-filter__row">
+                    <div class="catalog-filter-section__title">Отрасль </div>
+                    <select class="js-select">
+                      <option value=""></option>
+                      <option value=""></option>
+                      <option value=""></option>
+                    </select>
+                  </div>
+                  <div class="catalog-filter__row">
+                    <div class="catalog-filter-section__title">Тип продукции </div>
+                    <select class="js-select">
+                      <option value=""></option>
+                      <option value=""></option>
+                      <option value=""></option>
+                    </select>
+                  </div>
+                  <div class="catalog-filter__row">
+                    <div class="catalog-filter-section__title">Стадия реализации </div>
+                    <select class="js-select">
+                      <option value=""></option>
+                      <option value=""></option>
+                      <option value=""></option>
+                    </select>
+                  </div>
+                  <div class="catalog-filter__row">
+                    <div class="catalog-filter-section__title">Общая стоимость (тыс. руб.) </div>
+                    <div class="d-table input-tripple">
+                      <div class="d-table-cell va-middle">
+                        <input class="input input-bd" type="text" placeholder="От">
+                      </div>
+                      <div class="d-table-cell va-middle">- </div>
+                      <div class="d-table-cell va-middle">
+                        <input class="input input-bd" type="text" placeholder="До">
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="catalog-filter__btn">Все</div>
                 <div class="catalog-filter__section"></div>
               </div>
@@ -283,7 +317,7 @@
                   <div class="catalog-item__image" style="background-image: url(img/755187818413381.jpg);"></div>
                   <div class="catalog-item__content">
                     <div class="catalog-item__name">Проект называется так</div>
-                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
                     <div class="catalog-item__text"> 
                       <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. </p>
                       <p>Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. </p>
@@ -298,7 +332,7 @@
                   <div class="catalog-item__image" style="background-image: url(img/755187818413381.jpg);"></div>
                   <div class="catalog-item__content">
                     <div class="catalog-item__name">Проект называется так</div>
-                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
                     <div class="catalog-item__text"> 
                       <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. </p>
                       <p>Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. </p>
@@ -313,7 +347,7 @@
                   <div class="catalog-item__image" style="background-image: url(img/755187818413381.jpg);"></div>
                   <div class="catalog-item__content">
                     <div class="catalog-item__name">Проект называется так</div>
-                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
                     <div class="catalog-item__text"> 
                       <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. </p>
                       <p>Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. </p>
@@ -328,7 +362,7 @@
                   <div class="catalog-item__image" style="background-image: url(img/755187818413381.jpg);"></div>
                   <div class="catalog-item__content">
                     <div class="catalog-item__name">Проект называется так</div>
-                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
                     <div class="catalog-item__text"> 
                       <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. </p>
                       <p>Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. </p>
@@ -343,7 +377,7 @@
                   <div class="catalog-item__image" style="background-image: url(img/755187818413381.jpg);"></div>
                   <div class="catalog-item__content">
                     <div class="catalog-item__name">Проект называется так</div>
-                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
                     <div class="catalog-item__text"> 
                       <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. </p>
                       <p>Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. </p>
@@ -358,7 +392,7 @@
                   <div class="catalog-item__image" style="background-image: url(img/755187818413381.jpg);"></div>
                   <div class="catalog-item__content">
                     <div class="catalog-item__name">Проект называется так</div>
-                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
                     <div class="catalog-item__text"> 
                       <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. </p>
                       <p>Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. </p>
@@ -373,7 +407,7 @@
                   <div class="catalog-item__image" style="background-image: url(img/755187818413381.jpg);"></div>
                   <div class="catalog-item__content">
                     <div class="catalog-item__name">Проект называется так</div>
-                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
                     <div class="catalog-item__text"> 
                       <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. </p>
                       <p>Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. </p>
@@ -388,7 +422,7 @@
                   <div class="catalog-item__image" style="background-image: url(img/755187818413381.jpg);"></div>
                   <div class="catalog-item__content">
                     <div class="catalog-item__name">Проект называется так</div>
-                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
                     <div class="catalog-item__text"> 
                       <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. </p>
                       <p>Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. </p>
@@ -403,7 +437,7 @@
                   <div class="catalog-item__image" style="background-image: url(img/755187818413381.jpg);"></div>
                   <div class="catalog-item__content">
                     <div class="catalog-item__name">Проект называется так</div>
-                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><span class="catalog-item__addr">Улица Горького, дом 2</span><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
+                    <div class="catalog-item__info"><span class="catalog-item__prop">Стоимость 2 000 000 рублей</span><a class="catalog-item__addr" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%93%D0%BE%D1%80%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+2,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA,+%D0%91%D1%80%D1%8F%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+241050/data=!4m2!3m1!1s0x412d58f39a6a6c47:0x1ebbe48cefa0e375?sa=X&amp;ved=2ahUKEwizq6OCiKTcAhXvY98KHczZCpAQ8gEwAHoECAUQAQ">Улица Горького, дом 2</a><span class="catalog-item__done">Реализовано</span><span class="catalog-item__prop">Площадь 130га </span></div>
                     <div class="catalog-item__text"> 
                       <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. </p>
                       <p>Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. </p>
