--- a/index.html
+++ b/index.html
@@ -350,28 +350,38 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3 col-sm-12">
-              <p>Агентство по сопровождению <br> инвестиционных проектов <br> © 2011-1017</p>
-              <ul class="social">
-                <li class="social__item"><a class="social__link social__link--vk" href="#"><i class="fa fa-vk"></i></a></li>
-                <li class="social__item"><a class="social__link social__link--facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                <li class="social__item"><a class="social__link social__link--twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-              </ul>
-              <div class="footer-contacts">
-                <div class="footer-contacts__item">
-                  <div class="footer-contacts__title">Тел.</div>
-                  <div class="footer-contacts__val"><b>8 (4832) 74-58-55</b><br><b>8 (4832) 74-03-09</b></div>
+              <div class="row">
+                <div class="col-md-12 col-xs-6 ta-sm-right ">
+                  <p>Агентство по сопровождению <br> инвестиционных проектов <br> © 2011-1017</p>
                 </div>
-                <div class="footer-contacts__item">
-                  <div class="footer-contacts__title">Факс:</div>
-                  <div class="footer-contacts__val"><b>8 (4832) 74-07-26</b></div>
+                <div class="col-md-12 col-xs-6 ta-sm-left">
+                  <ul class="social">
+                    <li class="social__item"><a class="social__link social__link--vk" href="#"><i class="fa fa-vk"></i></a></li>
+                    <li class="social__item"><a class="social__link social__link--facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li class="social__item"><a class="social__link social__link--twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                  </ul>
                 </div>
-                <div class="footer-contacts__item">
-                  <div class="footer-contacts__title">Адрес:</div>
-                  <div class="footer-contacts__val">241050, г. Брянск, ул. Фокина, д. 31</div>
+              </div>
+              <div class="footer-contacts__wrap">
+                <div class="footer-contacts">
+                  <div class="footer-contacts__item">
+                    <div class="footer-contacts__title">Тел.</div>
+                    <div class="footer-contacts__val"><b>8 (4832) 74-58-55</b><br><b>8 (4832) 74-03-09</b></div>
+                  </div>
+                  <div class="footer-contacts__item">
+                    <div class="footer-contacts__title">Факс:</div>
+                    <div class="footer-contacts__val"><b>8 (4832) 74-07-26</b></div>
+                  </div>
                 </div>
-                <div class="footer-contacts__item">
-                  <div class="footer-contacts__title">E-mail:</div>
-                  <div class="footer-contacts__val">agency@invest32.ru, agencyinvest@gmail.com</div>
+                <div class="footer-contacts">
+                  <div class="footer-contacts__item">
+                    <div class="footer-contacts__title">Адрес:</div>
+                    <div class="footer-contacts__val">241050, г. Брянск, ул. Фокина, д. 31</div>
+                  </div>
+                  <div class="footer-contacts__item">
+                    <div class="footer-contacts__title">E-mail:</div>
+                    <div class="footer-contacts__val">agency@invest32.ru, agencyinvest@gmail.com</div>
+                  </div>
                 </div>
               </div>
             </div>
